--- a/bin/resources/config.properties
+++ b/bin/resources/config.properties
@@ -1,6 +1,3 @@
-imgPath = /Users/antoine/ImageSegm/ImageSegm/src/resources/training_images/86016/Test image.jpg
+imgPath = /Users/antoine/ImageSegm/ImageSegm/src/resources/training_images/176039/Test image.jpg
 
-nbrIndividual = 15
-crossoverRate = 0.5
-mutationRate = 0.
-nbrOfCycle = 120
+SegmentMinSize = 400
